{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 260,
  "lineage": "533b6fbb-0637-abdf-7426-8ba120479292",
  "resources": [
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "first_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:subnet/subnet-0eab33fcd6ee86973",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "172.16.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eab33fcd6ee86973",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029729714951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1a",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029729714951:loadbalancer/app/prod-alb/a46d8857b4f7ccf7",
            "arn_suffix": "app/prod-alb/a46d8857b4f7ccf7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-prod-alb-578754789.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:029729714951:loadbalancer/app/prod-alb/a46d8857b4f7ccf7",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0cdf4b82db8d71c07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c2bc2467806dd85"
              },
              {
                "subnet_id": "subnet-09f1f80f2a697732f"
              },
              {
                "subnet_id": "subnet-0eab33fcd6ee86973"
              }
            ],
            "subnets": [
              "subnet-03c2bc2467806dd85",
              "subnet-09f1f80f2a697732f",
              "subnet-0eab33fcd6ee86973"
            ],
            "tags": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029729714951:loadbalancer/app/prod-alb/a46d8857b4f7ccf7"
          },
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_subnet.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security_firewall.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029729714951:listener/app/prod-alb/a46d8857b4f7ccf7/0edd1253d2f1d366",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:029729714951:targetgroup/prod-tg/7069bd9231efd1cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029729714951:listener/app/prod-alb/a46d8857b4f7ccf7/0edd1253d2f1d366",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:029729714951:loadbalancer/app/prod-alb/a46d8857b4f7ccf7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.app_lb",
            "module.compute.aws_lb_target_group.app_tg",
            "module.compute.data.aws_subnet.first_private",
            "module.networking_vpc.module.vpc.aws_subnet.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security_firewall.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029729714951:targetgroup/prod-tg/7069bd9231efd1cc",
            "arn_suffix": "targetgroup/prod-tg/7069bd9231efd1cc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029729714951:targetgroup/prod-tg/7069bd9231efd1cc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.data.aws_subnet.first_private",
            "module.networking_vpc.module.vpc.aws_subnet.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:vpc-endpoint/vpce-0031a8835413c5094",
            "dns_entry": [
              {
                "dns_name": "vpce-0031a8835413c5094-4h6rri4l.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0031a8835413c5094-4h6rri4l-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0031a8835413c5094-4h6rri4l-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0031a8835413c5094-4h6rri4l-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07034903CRWEHSOITDWK"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07195933RJA8KGICI5PM"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0701917MYJJCJNZQ27A"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z07020971OAHBVZQJ2H0B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0031a8835413c5094",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-060bc672a3766cab3",
              "eni-0b6e7f4e5fdb5c0e2",
              "eni-0ec9e4cca01c0acc1"
            ],
            "owner_id": "029729714951",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0edffc9b647cc3224"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.10.124",
                "subnet_id": "subnet-0eab33fcd6ee86973"
              },
              {
                "ipv4": "172.16.11.8",
                "subnet_id": "subnet-09f1f80f2a697732f"
              },
              {
                "ipv4": "172.16.12.161",
                "subnet_id": "subnet-03c2bc2467806dd85"
              }
            ],
            "subnet_ids": [
              "subnet-03c2bc2467806dd85",
              "subnet-09f1f80f2a697732f",
              "subnet-0eab33fcd6ee86973"
            ],
            "tags": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_subnet.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:vpc-endpoint/vpce-07b81ab405ac87ba8",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-07b81ab405ac87ba8",
            "owner_id": "029729714951",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0255d358c576955f5",
              "rtb-062f782d6a0442782",
              "rtb-077678f484801e79f"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_route_table.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:network-acl/acl-058a22a7761e98626",
            "default_network_acl_id": "acl-058a22a7761e98626",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-058a22a7761e98626",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "029729714951",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-008b58d80398406a7",
              "subnet-03c2bc2467806dd85",
              "subnet-07ed9e148453c9623",
              "subnet-09f1f80f2a697732f",
              "subnet-0eab33fcd6ee86973",
              "subnet-0ebb0d930aad7bf33"
            ],
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-default",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-default",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:route-table/rtb-0e2ac87fc78ee1953",
            "default_route_table_id": "rtb-0e2ac87fc78ee1953",
            "id": "rtb-0e2ac87fc78ee1953",
            "owner_id": "029729714951",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-default",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-default",
              "Project": "aws-reservas-platform"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:security-group/sg-0edffc9b647cc3224",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0edffc9b647cc3224",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "029729714951",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-default",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-default",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:internet-gateway/igw-01588a632f72d8c29",
            "id": "igw-01588a632f72d8c29",
            "owner_id": "029729714951",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01588a632f72d8c29",
            "id": "r-rtb-078ff6ac7800bf3d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-078ff6ac7800bf3d8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_internet_gateway.this",
            "module.networking_vpc.module.vpc.aws_route_table.public",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:route-table/rtb-0255d358c576955f5",
            "id": "rtb-0255d358c576955f5",
            "owner_id": "029729714951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1a",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1a",
              "Project": "aws-reservas-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:route-table/rtb-062f782d6a0442782",
            "id": "rtb-062f782d6a0442782",
            "owner_id": "029729714951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1b",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1b",
              "Project": "aws-reservas-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:route-table/rtb-077678f484801e79f",
            "id": "rtb-077678f484801e79f",
            "owner_id": "029729714951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1c",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1c",
              "Project": "aws-reservas-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:route-table/rtb-078ff6ac7800bf3d8",
            "id": "rtb-078ff6ac7800bf3d8",
            "owner_id": "029729714951",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-public",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-public",
              "Project": "aws-reservas-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b85937730ba982a",
            "region": "us-east-1",
            "route_table_id": "rtb-0255d358c576955f5",
            "subnet_id": "subnet-0eab33fcd6ee86973"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_route_table.private",
            "module.networking_vpc.module.vpc.aws_subnet.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056bb6fe02142a873",
            "region": "us-east-1",
            "route_table_id": "rtb-062f782d6a0442782",
            "subnet_id": "subnet-09f1f80f2a697732f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_route_table.private",
            "module.networking_vpc.module.vpc.aws_subnet.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0571ef2635ccf0c73",
            "region": "us-east-1",
            "route_table_id": "rtb-077678f484801e79f",
            "subnet_id": "subnet-03c2bc2467806dd85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_route_table.private",
            "module.networking_vpc.module.vpc.aws_subnet.private",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f1c510db7005e7",
            "region": "us-east-1",
            "route_table_id": "rtb-078ff6ac7800bf3d8",
            "subnet_id": "subnet-0ebb0d930aad7bf33"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_route_table.public",
            "module.networking_vpc.module.vpc.aws_subnet.public",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03011e9cb7407a203",
            "region": "us-east-1",
            "route_table_id": "rtb-078ff6ac7800bf3d8",
            "subnet_id": "subnet-07ed9e148453c9623"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_route_table.public",
            "module.networking_vpc.module.vpc.aws_subnet.public",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c8638c49793798f",
            "region": "us-east-1",
            "route_table_id": "rtb-078ff6ac7800bf3d8",
            "subnet_id": "subnet-008b58d80398406a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_route_table.public",
            "module.networking_vpc.module.vpc.aws_subnet.public",
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:subnet/subnet-0eab33fcd6ee86973",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eab33fcd6ee86973",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029729714951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1a",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1a",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:subnet/subnet-09f1f80f2a697732f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f1f80f2a697732f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029729714951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1b",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1b",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:subnet/subnet-03c2bc2467806dd85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c2bc2467806dd85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029729714951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1c",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-private-us-east-1c",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:subnet/subnet-0ebb0d930aad7bf33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebb0d930aad7bf33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029729714951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-public-us-east-1a",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-public-us-east-1a",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:subnet/subnet-07ed9e148453c9623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ed9e148453c9623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029729714951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-public-us-east-1b",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-public-us-east-1b",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:subnet/subnet-008b58d80398406a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008b58d80398406a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029729714951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc-public-us-east-1c",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc-public-us-east-1c",
              "Project": "aws-reservas-platform"
            },
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this",
            "module.networking_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:vpc/vpc-0f346a3b57e87f843",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-058a22a7761e98626",
            "default_route_table_id": "rtb-0e2ac87fc78ee1953",
            "default_security_group_id": "sg-0edffc9b647cc3224",
            "dhcp_options_id": "dopt-0bcdff6909c6a0794",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f346a3b57e87f843",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2ac87fc78ee1953",
            "owner_id": "029729714951",
            "region": "us-east-1",
            "tags": {
              "Env": "prod",
              "Name": "prod-vpc",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "prod-vpc",
              "Project": "aws-reservas-platform"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_firewall",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029729714951:security-group/sg-0cdf4b82db8d71c07",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdf4b82db8d71c07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-ec2-sg",
            "name_prefix": "",
            "owner_id": "029729714951",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "tags_all": {
              "Env": "prod",
              "Project": "aws-reservas-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f346a3b57e87f843"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}